--- a/index.html
+++ b/index.html
@@ -1,1 +1,8 @@
-
+<!DOCTYPE html>
+<html lang="en">
+    <head>
+        <link rel="stylesheet" href="./assests/css/reset.css">
+        <link rel="stylesheet" href="./assests/css/style.css">
+        <title>Hannah Franz's Portfolio</title>
+    </head>
+</html>
