--- a/index.html
+++ b/index.html
@@ -5,9 +5,27 @@
         <link rel="stylesheet" href="./assests/css/style.css">
         <title>Hannah Franz's Portfolio</title>
     </head>
+    <!--Header created for webpage-->
         <a href="#"><h1>Hannah Franz</h1></a>
     <body>
-
+        <!--Links-->
+        <ul>
+            <li>
+                <a href="#about-me">About Me</a>
+            </li>
+            <li>
+                <a href="#portfolio">Portfolio</a>
+            </li>
+            <li>
+                <a href="https://www.linkedin.com/in/hannah-franz-58047021b/"></a>
+            </li>
+            <li>
+                <a href="#">Github</a>
+            </li>
+            <li>
+                <a href="#">Resume</a>
+            </li>
+        </ul>
 
     </body>
 
