--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
+        <meta charset="UTF-8">
         <link rel="stylesheet" href="./assests/css/reset.css">
         <link rel="stylesheet" href="./assests/css/style.css">
         <title>Hannah Franz's Portfolio</title>
@@ -17,7 +18,7 @@
                 <a href="#portfolio">Portfolio</a>
             </li>
             <li>
-                <a href="https://www.linkedin.com/in/hannah-franz-58047021b/"></a>
+                <a href="https://www.linkedin.com/in/hannah-franz-58047021b/">Linkedin</a>
             </li>
             <li>
                 <a href="#">Github</a>
