add a class to  header

--- a/index.html
+++ b/index.html
@@ -6,28 +6,33 @@
         <link rel="stylesheet" href="./assests/css/style.css">
         <title>Hannah Franz's Portfolio</title>
     </head>
-    <!--Header created for webpage-->
-        <a href="#"><h1>Hannah Franz</h1></a>
+    
     <body>
-        <!--Links-->
-        <ul>
-            <li>
-                <a href="#about-me">About Me</a>
-            </li>
-            <li>
-                <a href="#portfolio">Portfolio</a>
-            </li>
-            <li>
-                <a href="https://www.linkedin.com/in/hannah-franz-58047021b/">Linkedin</a>
-            </li>
-            <li>
-                <a href="#">Github</a>
-            </li>
-            <li>
-                <a href="#">Resume</a>
-            </li>
-        </ul>
 
+     <header class=header>
+        <!--Header created for webpage-->
+            <h1>Hannah Franz</h1>
+            <nav>
+        <!--Links-->
+            <ul>
+               <li>
+                    <a href="#about-me">About Me</a>
+               </li>
+               <li>
+                   <a href="#portfolio">Portfolio</a>
+              </li>
+              <li>
+                  <a href="https://www.linkedin.com/in/hannah-franz-58047021b/">Linkedin</a>
+              </li>
+              <li>
+                 <a href="#">Github</a>
+             </li>
+               <li>
+                   <a href="#">Resume</a>
+              </li>
+         </ul>
+    </nav>
+    </header>
     </body>
 
     </html>
