--- a/index.html
+++ b/index.html
@@ -33,6 +33,25 @@
          </ul>
     </nav>
     </header>
+
+    <main>
+            <section class="banner"></section>
+            <section class="about_me">
+                <aside>
+                    <h2>About me</h2>
+                </aside>
+                <div id="botder"></div>
+
+                <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                    Ullam maiores, quibusdam vel, delectus culpa natus quisquam vero fugit accusamus
+                      
+                </p>
+                <p>   
+                    perferendis id sequi reprehenderit temporibus, tenetur voluptates. Repellendus deleniti fuga temporibus?
+                </p>
+            </section>
+    </main>
     </body>
 
     </html>
