--- a/index.html
+++ b/index.html
@@ -51,6 +51,13 @@
                     perferendis id sequi reprehenderit temporibus, tenetur voluptates. Repellendus deleniti fuga temporibus?
                 </p>
             </section>
+            <section class="portfolio">
+                <aside>
+                    <h3>Portfolio</h3>
+                </aside>
+
+                
+            </section>
     </main>
     </body>
 
