--- a/index.html
+++ b/index.html
@@ -3,8 +3,10 @@
 
 <head>
     <meta charset="UTF-8">
-
-    <link rel="stylesheet" href="style.css">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=divice-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./assets/style.css">
+    <link rel="stylesheet" href="./assets/style.css">
     <title>Hannah Franz's Portfolio</title>
 </head>
 
