--- a/index.html
+++ b/index.html
@@ -14,19 +14,13 @@
 
     <header>
         <!--Header created for webpage-->
-        <h1>Hannah Franz</h1>
+        <h1 id="name">Hannah Franz</h1>
         <nav>
             <!--Links-->
-
-
             <a href="#about-me">About Me</a>
-
             <a href="#portfolio">Portfolio</a>
-
             <a href="https://www.linkedin.com/in/hannah-franz-58047021b/">Linkedin</a>
-
             <a href="#">Github</a>
-
             <a href="#">Resume</a>
 
         </nav>
@@ -36,11 +30,13 @@
     <main>
 
         <section class="about_me">
-            <aside>
-                <h2>About me</h2>
-            </aside>
+                <a name="about-me"><h2 class="main-title">About me</h2></a>
+                <h3 id="facts">Lorem ipsum dolor sit amet consectetur adipisicing elit.</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum nam ratione 
+                    delectus deleniti vitae illo? Labore, veniam natus? Earum </p>
+        </section>
 
-            <div id="botder">
+            <div id="border">
                 <p>
                     Lorem ipsum dolor sit amet consectetur adipisicing elit.
                     Ullam maiores, quibusdam vel, delectus culpa natus quisquam vero fugit accusamus
