--- a/index.html
+++ b/index.html
@@ -26,39 +26,47 @@
         </nav>
     </header>
 
+    <section class="about_me">
+        <a name="about-me">
+            <h2 class="main-title">About me</h2>
+        </a>
+        <h3 id="facts">Lorem ipsum dolor sit amet consectetur adipisicing elit.</h3>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum nam ratione
+            delectus deleniti vitae illo? Labore, veniam natus? Earum </p>
+    </section>
+
+    <section class="portfolio">
+        <aside>
+            <a name="portfolio"><h4>Portfolio</h4></a>
+            <figure class="card">
+            <img>
+            <p> lorem ipsum </p>
+            </figure>
+        </aside>
+
+
+    </section>
     <section class="banner"></section>
     <main>
 
-        <section class="about_me">
-                <a name="about-me"><h2 class="main-title">About me</h2></a>
-                <h3 id="facts">Lorem ipsum dolor sit amet consectetur adipisicing elit.</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum nam ratione 
-                    delectus deleniti vitae illo? Labore, veniam natus? Earum </p>
-        </section>
 
-            <div id="border">
-                <p>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                    Ullam maiores, quibusdam vel, delectus culpa natus quisquam vero fugit accusamus
-                    perferendis id sequi reprehenderit temporibus, tenetur voluptates. Repellendus deleniti fuga
-                    temporibus?
-                </p>
-                <p>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                    Corporis repudiandae distinctio commodi, et veritatis aspernatur in illum nisi alias dicta sequi rem
-                    consequuntur. Velit rem eos placeat a totam ipsam.
-                </p>
-            </div>
+        <div id="border">
+            <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                Ullam maiores, quibusdam vel, delectus culpa natus quisquam vero fugit accusamus
+                perferendis id sequi reprehenderit temporibus, tenetur voluptates. Repellendus deleniti fuga
+                temporibus?
+            </p>
+            <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                Corporis repudiandae distinctio commodi, et veritatis aspernatur in illum nisi alias dicta sequi rem
+                consequuntur. Velit rem eos placeat a totam ipsam.
+            </p>
+        </div>
 
 
         </section>
-        <section class="portfolio">
-            <aside>
-                <h3>Portfolio</h3>
-            </aside>
-
-
-        </section>
+        
     </main>
 </body>
 
