--- a/index.html
+++ b/index.html
@@ -20,8 +20,7 @@
             <!--Links-->
             <a href="#about-me">About Me</a>
             <a href="#portfolio">Portfolio</a>
-            <a href="https://www.linkedin.com/in/hannah-franz-58047021b/">Linkedin</a>
-            <a href="#">Github</a>
+            <a href="#">Content Me</a>
             <a href="#">Resume</a>
 
         </nav>
@@ -31,22 +30,23 @@
         <a name="about-me">
             <h2 class="main-title">About me</h2>
         </a>
-        <h3 id="facts">Lorem ipsum dolor sit amet consectetur adipisicing elit.</h3>
+        <h3 id="facts"> Lorem ipsum dolor sit amet consectetur adipisicing elit.</h3>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum nam ratione
             delectus deleniti vitae illo? Labore, veniam natus? Earum </p>
     </section>
 
     <section class="portfolio">
-        <aside>
-            <a name="portfolio"><h4>Portfolio</h4></a>
+        <a name="portfolio">
+            <h4>Portfolio</h4>
+        </a>
+        <article class="portfolio-box">
             <figure class="card">
-            <img>
-            <p> lorem ipsum </p>
+                <img scr="./assets/place_holder.png" alt="Image Holder" class="placeholderimage">
+                <p> lorem ipsum </p>
             </figure>
-        </aside>
-
-
+        </article>
     </section>
+
     <section class="banner"></section>
     <main>
 
@@ -64,10 +64,10 @@
                 consequuntur. Velit rem eos placeat a totam ipsam.
             </p>
         </div>
-
+        <a href="https://www.linkedin.com/in/hannah-franz-58047021b/">Linkedin</a>
 
         </section>
-        
+
     </main>
 </body>
 
