--- a/index.html
+++ b/index.html
@@ -64,7 +64,13 @@
                 consequuntur. Velit rem eos placeat a totam ipsam.
             </p>
         </div>
+        <footer>
+            <h5>Contact Me</h5>
         <a href="https://www.linkedin.com/in/hannah-franz-58047021b/">Linkedin</a>
+        <a href="github">Github</a>
+        <a href="phonenumber">555-555-5555</a>
+        <a href="email">hannahfranz25@gmail.com</a>
+        </footer>
 
         </section>
 
