--- a/index.html
+++ b/index.html
@@ -25,10 +25,10 @@
 
         </nav>
     </header>
-
+    <h2 id="subtitle">Something Cool</h2>
     <section class="about_me">
         <a name="about-me">
-            <h2 class="main-title">About me</h2>
+            <h2 class="main-title">About me</h3>
         </a>
         <h3 id="facts"> Lorem ipsum dolor sit amet consectetur adipisicing elit.</h3>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum nam ratione
@@ -47,23 +47,40 @@
         </article>
     </section>
 
-    <section class="banner"></section>
-    <main>
+    section class="portfolio">
+        <a name="portfolio">
+            <h4>Portfolio</h4>
+        </a>
+        <article class="portfolio-box">
+            <figure class="card">
+                <img scr="./assets/place_holder.png" alt="Image Holder" class="placeholderimage">
+                <p> lorem ipsum </p>
+            </figure>
+        </article>
+    </section>
+    section class="portfolio">
+    <a name="portfolio">
+        <h4>Portfolio</h4>
+    </a>
+    <article class="portfolio-box">
+        <figure class="card">
+            <img scr="./assets/place_holder.png" alt="Image Holder" class="placeholderimage">
+            <p> lorem ipsum </p>
+        </figure>
+    </article>
+</section>
+section class="portfolio">
+        <a name="portfolio">
+            <h4>Portfolio</h4>
+        </a>
+        <article class="portfolio-box">
+            <figure class="card">
+                <img scr="./assets/place_holder.png" alt="Image Holder" class="placeholderimage">
+                <p> lorem ipsum </p>
+            </figure>
+        </article>
+    </section>
 
-
-        <div id="border">
-            <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                Ullam maiores, quibusdam vel, delectus culpa natus quisquam vero fugit accusamus
-                perferendis id sequi reprehenderit temporibus, tenetur voluptates. Repellendus deleniti fuga
-                temporibus?
-            </p>
-            <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                Corporis repudiandae distinctio commodi, et veritatis aspernatur in illum nisi alias dicta sequi rem
-                consequuntur. Velit rem eos placeat a totam ipsam.
-            </p>
-        </div>
         <footer>
             <h5>Contact Me</h5>
         <a href="https://www.linkedin.com/in/hannah-franz-58047021b/">Linkedin</a>
