--- a/index.html
+++ b/index.html
@@ -13,41 +13,42 @@
 
 <body>
 
-    <header>
+    <aside>
         <!--Header created for webpage-->
         <h1 id="name">Hannah Franz</h1>
-        <nav>
+        <nav class="side-nav">
             <!--Links-->
-            <a href="#about-me">About Me</a>
-            <a href="#portfolio">Portfolio</a>
-            <a href="#">Content Me</a>
-            <a href="#">Resume</a>
-
+            <ul>
+                <li><a href="#about-me">About Me</a></li>
+                <li><a href="#portfolio">Portfolio</a></li>
+                <li><a href="#">Content Me</a></li>
+                <li><a href="#">Resume</a></li>
+            </ul>
         </nav>
-    </header>
-    <h2 id="subtitle">Something Cool</h2>
-    <section class="about_me">
-        <a name="about-me">
-            <h2 class="main-title">About me</h3>
-        </a>
-        <h3 id="facts"> Lorem ipsum dolor sit amet consectetur adipisicing elit.</h3>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum nam ratione
-            delectus deleniti vitae illo? Labore, veniam natus? Earum </p>
-    </section>
+        </header>
+        <h2 id="subtitle">Something Cool</h2>
+        <section class="about_me">
+            <a name="about-me">
+                <h2 class="main-title">About me</h3>
+            </a>
+            <h3 id="facts"> Lorem ipsum dolor sit amet consectetur adipisicing elit.</h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum nam ratione
+                delectus deleniti vitae illo? Labore, veniam natus? Earum </p>
+        </section>
 
-    <section class="portfolio">
-        <a name="portfolio">
-            <h4>Portfolio</h4>
-        </a>
-        <article class="portfolio-box">
-            <figure class="card">
-                <img scr="./assets/place_holder.png" alt="Image Holder" class="placeholderimage">
-                <p> lorem ipsum </p>
-            </figure>
-        </article>
-    </section>
+        <section class="portfolio">
+            <a name="portfolio">
+                <h4>Portfolio</h4>
+            </a>
+            <article class="portfolio-box">
+                <figure class="card">
+                    <img scr="./assets/place_holder.png" alt="Image Holder" class="placeholderimage">
+                    <p> lorem ipsum </p>
+                </figure>
+            </article>
+        </section>
 
-    section class="portfolio">
+        section class="portfolio">
         <a name="portfolio">
             <h4>Portfolio</h4>
         </a>
@@ -57,19 +58,8 @@
                 <p> lorem ipsum </p>
             </figure>
         </article>
-    </section>
-    section class="portfolio">
-    <a name="portfolio">
-        <h4>Portfolio</h4>
-    </a>
-    <article class="portfolio-box">
-        <figure class="card">
-            <img scr="./assets/place_holder.png" alt="Image Holder" class="placeholderimage">
-            <p> lorem ipsum </p>
-        </figure>
-    </article>
-</section>
-section class="portfolio">
+        </section>
+        section class="portfolio">
         <a name="portfolio">
             <h4>Portfolio</h4>
         </a>
@@ -79,19 +69,30 @@ section class="portfolio">
                 <p> lorem ipsum </p>
             </figure>
         </article>
-    </section>
+        </section>
+        section class="portfolio">
+        <a name="portfolio">
+            <h4>Portfolio</h4>
+        </a>
+        <article class="portfolio-box">
+            <figure class="card">
+                <img scr="./assets/place_holder.png" alt="Image Holder" class="placeholderimage">
+                <p> lorem ipsum </p>
+            </figure>
+        </article>
+        </section>
 
         <footer>
             <h5>Contact Me</h5>
-        <a href="https://www.linkedin.com/in/hannah-franz-58047021b/">Linkedin</a>
-        <a href="github">Github</a>
-        <a href="phonenumber">555-555-5555</a>
-        <a href="email">hannahfranz25@gmail.com</a>
+            <a href="https://www.linkedin.com/in/hannah-franz-58047021b/">Linkedin</a>
+            <a href="github">Github</a>
+            <a href="phonenumber">555-555-5555</a>
+            <a href="email">hannahfranz25@gmail.com</a>
         </footer>
 
         </section>
 
-    </main>
+        </main>
 </body>
 
 </html>
