restructure about me class

--- a/index.html
+++ b/index.html
@@ -25,12 +25,13 @@
                 <li><a href="#">Resume</a></li>
             </ul>
         </nav>
-        </header>
-        <h2 id="subtitle">Something Cool</h2>
+    </aside>
+
+    <main>
+
         <section class="about_me">
-            <a name="about-me">
-                <h2 class="main-title">About me</h3>
-            </a>
+        <h2 id="subtitle">Something Cool</h2>
+            <a name="about-me"><h2 class="main-title">About me</h3></a>
             <h3 id="facts"> Lorem ipsum dolor sit amet consectetur adipisicing elit.</h3>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum nam ratione
                 delectus deleniti vitae illo? Labore, veniam natus? Earum </p>
