--- a/index.html
+++ b/index.html
@@ -30,59 +30,76 @@
     <main>
 
         <section class="about_me">
-        <h2 id="subtitle">Something Cool</h2>
-            <a name="about-me"><h2 class="main-title">About me</h3></a>
+            <h2 id="subtitle">Something Cool</h2>
+            <a name="about-me">
+                <h2 class="main-title">About me</h3>
+            </a>
             <h3 id="facts"> Lorem ipsum dolor sit amet consectetur adipisicing elit.</h3>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum nam ratione
                 delectus deleniti vitae illo? Labore, veniam natus? Earum </p>
         </section>
 
-        <section class="portfolio">
+        <section class="port-row justify-center">
             <a name="portfolio">
-                <h4>Portfolio</h4>
+                <h1 class="main-title">Portfolio</h1>
             </a>
-            <article class="portfolio-box">
-                <figure class="card">
+            <article class="portbox-main">
+                <figure class="port-card">
                     <img scr="./assets/place_holder.png" alt="Image Holder" class="placeholderimage">
                     <p> lorem ipsum </p>
                 </figure>
             </article>
-        </section>
 
-        section class="portfolio">
-        <a name="portfolio">
-            <h4>Portfolio</h4>
-        </a>
-        <article class="portfolio-box">
-            <figure class="card">
-                <img scr="./assets/place_holder.png" alt="Image Holder" class="placeholderimage">
-                <p> lorem ipsum </p>
-            </figure>
-        </article>
-        </section>
-        section class="portfolio">
-        <a name="portfolio">
-            <h4>Portfolio</h4>
-        </a>
-        <article class="portfolio-box">
-            <figure class="card">
-                <img scr="./assets/place_holder.png" alt="Image Holder" class="placeholderimage">
-                <p> lorem ipsum </p>
-            </figure>
-        </article>
-        </section>
-        section class="portfolio">
-        <a name="portfolio">
-            <h4>Portfolio</h4>
-        </a>
-        <article class="portfolio-box">
-            <figure class="card">
-                <img scr="./assets/place_holder.png" alt="Image Holder" class="placeholderimage">
-                <p> lorem ipsum </p>
-            </figure>
-        </article>
-        </section>
+            <article class="portbox">
+                <figure class="port-card">
+                    <h2 class="port-h2">Portfolio</h2>
+                    <img scr="./assets/place_holder.png" alt="Image Holder" class="placeholderimage">
+                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Modi fuga, officiis corporis suscipit
+                        sequi dolorum
+                        illum dolores atque quas eveniet sit alias iusto laudantium.</p>
+                </figure>
+            </article>
 
+            <article class="portbox">
+                <figure class="port-card">
+                    <h2 class="port-h2">Portfolio</h2>
+                    <img scr="./assets/place_holder.png" alt="Image Holder" class="placeholderimage">
+                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Modi fuga, officiis corporis suscipit
+                        sequi dolorum
+                        illum dolores atque quas eveniet sit alias iusto laudantium.</p>
+                </figure>
+            </article>
+
+            <article class="portbox">
+                <figure class="port-card">
+                    <h2 class="port-h2">Portfolio</h2>
+                    <img scr="./assets/place_holder.png" alt="Image Holder" class="placeholderimage">
+                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Modi fuga, officiis corporis suscipit
+                        sequi dolorum
+                        illum dolores atque quas eveniet sit alias iusto laudantium.</p>
+                </figure>
+            </article>
+
+            <article class="portbox">
+                <figure class="port-card">
+                    <h2 class="port-h2">Portfolio</h2>
+                    <img scr="./assets/place_holder.png" alt="Image Holder" class="placeholderimage">
+                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Modi fuga, officiis corporis suscipit
+                        sequi dolorum
+                        illum dolores atque quas eveniet sit alias iusto laudantium.</p>
+                </figure>
+            </article>
+
+            <article class="portbox">
+                <figure class="port-card">
+                    <h2 class="port-h2">Portfolio</h2>
+                    <img scr="./assets/place_holder.png" alt="Image Holder" class="placeholderimage">
+                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Modi fuga, officiis corporis suscipit
+                        sequi dolorum
+                        illum dolores atque quas eveniet sit alias iusto laudantium.</p>
+                </figure>
+            </article>
+        </section>
         <footer>
             <h5>Contact Me</h5>
             <a href="https://www.linkedin.com/in/hannah-franz-58047021b/">Linkedin</a>
@@ -93,7 +110,7 @@
 
         </section>
 
-        </main>
+    </main>
 </body>
 
 </html>
