--- a/index.html
+++ b/index.html
@@ -100,17 +100,19 @@
                 </figure>
             </article>
         </section>
-        <footer>
-            <h5>Contact Me</h5>
-            <a href="https://www.linkedin.com/in/hannah-franz-58047021b/">Linkedin</a>
-            <a href="github">Github</a>
-            <a href="phonenumber">555-555-5555</a>
-            <a href="email">hannahfranz25@gmail.com</a>
-        </footer>
 
-        </section>
-
+        <section class="contact-me">
+      <a name="contact-me><h1 class ="main-title">Contact Me</h1></a>
+      <p>Coming Soon</p>
+      </section>
     </main>
+    <footer>
+        <a href="https://www.linkedin.com/in/hannah-franz-58047021b/">Linkedin</a>
+        <a href="github">Github</a>
+        <a href="phonenumber">555-555-5555</a>
+        <a href="email">hannahfranz25@gmail.com</a>
+    </footer>
+
 </body>
 
 </html>
