--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <aside>
         <!--Header created for webpage-->
         <h1 id="name">Hannah Franz</h1>
-        <nav class="side-nav">
+        <nav class="side-bar">
             <!--Links-->
             <ul>
                 <li><a href="#about-me">About Me</a></li>
@@ -37,66 +37,57 @@
             <h3 id="facts"> Lorem ipsum dolor sit amet consectetur adipisicing elit.</h3>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum nam ratione
                 delectus deleniti vitae illo? Labore, veniam natus? Earum </p>
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Expedita necessitatibus esse cupiditate provident dolorem error laboriosam iste. Provident atque, repellendus nulla quod adipisci, incidunt cumque velit exercitationem culpa eos blanditiis.</p>
         </section>
 
         <section class="port-row justify-center">
             <a name="portfolio">
                 <h1 class="main-title">Portfolio</h1>
             </a>
-            <article class="portbox-main">
+            <article class="box-main">
                 <figure class="port-card">
                     <img scr="./assets/place_holder.png" alt="Image Holder" class="placeholderimage">
                     <p> lorem ipsum </p>
                 </figure>
             </article>
 
-            <article class="portbox">
+            <article class="box">
                 <figure class="port-card">
-                    <h2 class="port-h2">Portfolio</h2>
+                    <h2 class="port-h2"></h2>
                     <img scr="./assets/place_holder.png" alt="Image Holder" class="placeholderimage">
-                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Modi fuga, officiis corporis suscipit
-                        sequi dolorum
-                        illum dolores atque quas eveniet sit alias iusto laudantium.</p>
+                    <p>Decription</p>
                 </figure>
             </article>
 
-            <article class="portbox">
+            <article class="box">
                 <figure class="port-card">
-                    <h2 class="port-h2">Portfolio</h2>
+                    <h2 class="port-h2"></h2>
                     <img scr="./assets/place_holder.png" alt="Image Holder" class="placeholderimage">
-                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Modi fuga, officiis corporis suscipit
-                        sequi dolorum
-                        illum dolores atque quas eveniet sit alias iusto laudantium.</p>
+                    <p>Decription</p>
                 </figure>
             </article>
 
-            <article class="portbox">
+            <article class="box">
                 <figure class="port-card">
-                    <h2 class="port-h2">Portfolio</h2>
+                    <h2 class="port-h2"></h2>
                     <img scr="./assets/place_holder.png" alt="Image Holder" class="placeholderimage">
-                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Modi fuga, officiis corporis suscipit
-                        sequi dolorum
-                        illum dolores atque quas eveniet sit alias iusto laudantium.</p>
+                    <p>Decription</p>
                 </figure>
             </article>
 
-            <article class="portbox">
+            <article class="box">
                 <figure class="port-card">
-                    <h2 class="port-h2">Portfolio</h2>
+                    <h2 class="port-h2"></h2>
                     <img scr="./assets/place_holder.png" alt="Image Holder" class="placeholderimage">
-                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Modi fuga, officiis corporis suscipit
-                        sequi dolorum
-                        illum dolores atque quas eveniet sit alias iusto laudantium.</p>
+                    <p>Decription</p>
                 </figure>
             </article>
 
-            <article class="portbox">
+            <article class="box">
                 <figure class="port-card">
-                    <h2 class="port-h2">Portfolio</h2>
+                    <h2 class="port-h2"></h2>
                     <img scr="./assets/place_holder.png" alt="Image Holder" class="placeholderimage">
-                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Modi fuga, officiis corporis suscipit
-                        sequi dolorum
-                        illum dolores atque quas eveniet sit alias iusto laudantium.</p>
+                    <p>Decription</p>
                 </figure>
             </article>
         </section>
