--- a/index.html
+++ b/index.html
@@ -43,14 +43,14 @@
                 <h1 class="main-title">Portfolio</h1>
             </a>
             <article class="box-main">
-                <figure class="port-card">
+                <figure class="card">
                     <img scr="./assets/place_holder.png" alt="Image Holder" class="placeholderimage">
                     <p> lorem ipsum </p>
                 </figure>
             </article>
 
             <article class="box">
-                <figure class="port-card">
+                <figure class="card">
                     <h2 class="port-h2"></h2>
                     <img scr="./assets/place_holder.png" alt="Image Holder" class="placeholderimage">
                     <p>Decription</p>
@@ -58,7 +58,7 @@
             </article>
 
             <article class="box">
-                <figure class="port-card">
+                <figure class="card">
                     <h2 class="port-h2"></h2>
                     <img scr="./assets/place_holder.png" alt="Image Holder" class="placeholderimage">
                     <p>Decription</p>
@@ -66,7 +66,7 @@
             </article>
 
             <article class="box">
-                <figure class="port-card">
+                <figure class="card">
                     <h2 class="port-h2"></h2>
                     <img scr="./assets/place_holder.png" alt="Image Holder" class="placeholderimage">
                     <p>Decription</p>
@@ -74,7 +74,7 @@
             </article>
 
             <article class="box">
-                <figure class="port-card">
+                <figure class="card">
                     <h2 class="port-h2"></h2>
                     <img scr="./assets/place_holder.png" alt="Image Holder" class="placeholderimage">
                     <p>Decription</p>
@@ -82,7 +82,7 @@
             </article>
 
             <article class="box">
-                <figure class="port-card">
+                <figure class="card">
                     <h2 class="port-h2"></h2>
                     <img scr="./assets/place_holder.png" alt="Image Holder" class="placeholderimage">
                     <p>Decription</p>
