--- a/index.html
+++ b/index.html
@@ -4,41 +4,49 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <link rel="stylesheet" href="./assets/style.css">
+    <meta name="viewport" content="width=devive-width, initial- scale=1.0">
+    <link rel="stylesheet" href="./assets/restyle.css">
     <link rel="stylesheet" href="./assets/style.css">
     <title>Hannah Franz's Portfolio</title>
 </head>
 
 <body>
 
-    <aside>
+    <header>
         <!--Header created for webpage-->
-        <h1 id="name">Hannah Franz</h1>
-        <nav class="side-bar">
+        <h1 id="name-style">Hannah Franz</h1>
+        <nav class="links-content">
             <!--Links-->
             <ul>
                 <li><a href="#about-me">About Me</a></li>
-                <li><a href="#portfolio">Portfolio</a></li>
-                <li><a href="#">Content Me</a></li>
-                <li><a href="#">Resume</a></li>
+                <li><a href="#work">Work/a></li>
+                <li><a href="#content-Me">Contact Me</a></li>
+                <li><a href="https://www.linkedin.com/in/hannah-franz-58047021b/">linkedin</a></li>
             </ul>
         </nav>
-    </aside>
+    </header>
 
     <main>
+        <section class="hero" alt="large cover photo of a feild ">
+            <div id="subtitle-img">"anything can happen, thats the beauty of creating<br> -Ernie Harwell</div>
+        </section>
 
-        <section class="about_me">
-            <h2 id="subtitle">Something Cool</h2>
-            <a name="about-me">
-                <h2 class="main-title">About me</h3>
-            </a>
-            <h3 id="facts"> Lorem ipsum dolor sit amet consectetur adipisicing elit.</h3>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum nam ratione
+        <div class="main-box">
+
+        <section class="about_me" id="about-me">
+            <h2 class="align-left">Work</h2>
+            <p class="align-right">Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum nam ratione
                 delectus deleniti vitae illo? Labore, veniam natus? Earum </p>
                 <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Expedita necessitatibus esse cupiditate provident dolorem error laboriosam iste. Provident atque, repellendus nulla quod adipisci, incidunt cumque velit exercitationem culpa eos blanditiis.</p>
         </section>
 
-        <section class="port-row justify-center">
+        <section class="about-me" id="work">
+                <h2 class="align-left">Work</h2>
+                <div class="work-left">
+                    <span class="img-box1">
+                        <a href=""
+
+
             <a name="portfolio">
                 <h1 class="main-title">Portfolio</h1>
             </a>
@@ -96,7 +104,6 @@
       </section>
     </main>
     <footer>
-        <a href="https://www.linkedin.com/in/hannah-franz-58047021b/">Linkedin</a>
         <a href="github">Github</a>
         <a href="phonenumber">555-555-5555</a>
         <a href="email">hannahfranz25@gmail.com</a>
