--- a/index.html
+++ b/index.html
@@ -33,75 +33,78 @@
 
         <div class="main-box">
 
-        <section class="about_me" id="about-me">
-            <h2 class="align-left">Work</h2>
-            <p class="align-right">Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum nam ratione
-                delectus deleniti vitae illo? Labore, veniam natus? Earum </p>
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Expedita necessitatibus esse cupiditate provident dolorem error laboriosam iste. Provident atque, repellendus nulla quod adipisci, incidunt cumque velit exercitationem culpa eos blanditiis.</p>
-        </section>
+            <section class="about_me" id="about-me">
+                <h2 class="align-left">Work</h2>
+                <p class="align-right">Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum nam ratione
+                    delectus deleniti vitae illo? Labore, veniam natus? Earum </p>
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Expedita necessitatibus esse cupiditate
+                    provident dolorem error laboriosam iste. Provident atque, repellendus nulla quod adipisci, incidunt
+                    cumque velit exercitationem culpa eos blanditiis.</p>
+            </section>
 
-        <section class="about-me" id="work">
+            <section class="about-me" id="work">
                 <h2 class="align-left">Work</h2>
                 <div class="work-left">
                     <span class="img-box1">
-                        <a href=""
+                        <a href="https://github.com/Hfranz1/Horiseon-Refactoring" target="_blank"><img
+                                src="./assets/Horiseon-Refactoring.png" alt="Photo of site" class="main-img-resize"></a>
+<div class="img-title"> Horiseon-Refactoring</div>
 
+                        <a name="portfolio">
+                            <h1 class="main-title">Portfolio</h1>
+                        </a>
+                        <article class="box-main">
+                            <figure class="card">
+                                <img scr="./assets/place_holder.png" alt="Image Holder" class="placeholderimage">
+                                <p> lorem ipsum </p>
+                            </figure>
+                        </article>
 
-            <a name="portfolio">
-                <h1 class="main-title">Portfolio</h1>
-            </a>
-            <article class="box-main">
-                <figure class="card">
-                    <img scr="./assets/place_holder.png" alt="Image Holder" class="placeholderimage">
-                    <p> lorem ipsum </p>
-                </figure>
-            </article>
+                        <article class="box">
+                            <figure class="card">
+                                <h2 class="port-h2"></h2>
+                                <img scr="./assets/place_holder.png" alt="Image Holder" class="placeholderimage">
+                                <p>Decription</p>
+                            </figure>
+                        </article>
 
-            <article class="box">
-                <figure class="card">
-                    <h2 class="port-h2"></h2>
-                    <img scr="./assets/place_holder.png" alt="Image Holder" class="placeholderimage">
-                    <p>Decription</p>
-                </figure>
-            </article>
+                        <article class="box">
+                            <figure class="card">
+                                <h2 class="port-h2"></h2>
+                                <img scr="./assets/place_holder.png" alt="Image Holder" class="placeholderimage">
+                                <p>Decription</p>
+                            </figure>
+                        </article>
 
-            <article class="box">
-                <figure class="card">
-                    <h2 class="port-h2"></h2>
-                    <img scr="./assets/place_holder.png" alt="Image Holder" class="placeholderimage">
-                    <p>Decription</p>
-                </figure>
-            </article>
+                        <article class="box">
+                            <figure class="card">
+                                <h2 class="port-h2"></h2>
+                                <img scr="./assets/place_holder.png" alt="Image Holder" class="placeholderimage">
+                                <p>Decription</p>
+                            </figure>
+                        </article>
 
-            <article class="box">
-                <figure class="card">
-                    <h2 class="port-h2"></h2>
-                    <img scr="./assets/place_holder.png" alt="Image Holder" class="placeholderimage">
-                    <p>Decription</p>
-                </figure>
-            </article>
+                        <article class="box">
+                            <figure class="card">
+                                <h2 class="port-h2"></h2>
+                                <img scr="./assets/place_holder.png" alt="Image Holder" class="placeholderimage">
+                                <p>Decription</p>
+                            </figure>
+                        </article>
 
-            <article class="box">
-                <figure class="card">
-                    <h2 class="port-h2"></h2>
-                    <img scr="./assets/place_holder.png" alt="Image Holder" class="placeholderimage">
-                    <p>Decription</p>
-                </figure>
-            </article>
+                        <article class="box">
+                            <figure class="card">
+                                <h2 class="port-h2"></h2>
+                                <img scr="./assets/place_holder.png" alt="Image Holder" class="placeholderimage">
+                                <p>Decription</p>
+                            </figure>
+                        </article>
+            </section>
 
-            <article class="box">
-                <figure class="card">
-                    <h2 class="port-h2"></h2>
-                    <img scr="./assets/place_holder.png" alt="Image Holder" class="placeholderimage">
-                    <p>Decription</p>
-                </figure>
-            </article>
-        </section>
-
-        <section class="contact-me">
-      <a name="contact-me><h1 class ="main-title">Contact Me</h1></a>
-      <p>Coming Soon</p>
-      </section>
+            <section class="contact-me">
+                <a name="contact-me><h1 class =" main-title">Contact Me</h1></a>
+                <p>Coming Soon</p>
+            </section>
     </main>
     <footer>
         <a href="github">Github</a>
