--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <ul>
                 <li><a href="#about-me">About Me</a></li>
                 <li><a href="#work">Work/a></li>
-                <li><a href="#content-Me">Contact Me</a></li>
+                <li><a href="#content-me">Contact Me</a></li>
                 <li><a href="https://www.linkedin.com/in/hannah-franz-58047021b/">linkedin</a></li>
             </ul>
         </nav>
@@ -48,68 +48,44 @@
                     <span class="img-box1">
                         <a href="https://github.com/Hfranz1/Horiseon-Refactoring" target="_blank"><img
                                 src="./assets/Horiseon-Refactoring.png" alt="Photo of site" class="main-img-resize"></a>
-<div class="img-title"> Horiseon-Refactoring</div>
+                        <div class="img-title"> Horiseon-Refactoring</div>
+                    </span>
 
-                        <a name="portfolio">
-                            <h1 class="main-title">Portfolio</h1>
-                        </a>
-                        <article class="box-main">
-                            <figure class="card">
-                                <img scr="./assets/place_holder.png" alt="Image Holder" class="placeholderimage">
-                                <p> lorem ipsum </p>
-                            </figure>
-                        </article>
+                    <div id="work-parent">
+                        <span class="img-box sub-one">
+                            <img scr="./assets/placeholderimage.png" alt="Image Holder" class="placeholderimage">
+                            <div id="img-title1">Sample img</div>
+                        </span>
 
-                        <article class="box">
-                            <figure class="card">
-                                <h2 class="port-h2"></h2>
-                                <img scr="./assets/place_holder.png" alt="Image Holder" class="placeholderimage">
-                                <p>Decription</p>
-                            </figure>
-                        </article>
+                        <span class="img-box sub-two">
+                            <img scr="./assets/placeholderimage.png" alt="Image Holder" class="placeholderimage">
+                            <div id="img-title1">Sample img</div>
+                        </span>
 
-                        <article class="box">
-                            <figure class="card">
-                                <h2 class="port-h2"></h2>
-                                <img scr="./assets/place_holder.png" alt="Image Holder" class="placeholderimage">
-                                <p>Decription</p>
-                            </figure>
-                        </article>
+                        <span class="img-box sub-three">
+                            <img scr="./assets/placeholderimage.png" alt="Image Holder" class="placeholderimage">
+                            <div id="img-title1">Sample img</div>
+                        </span>
 
-                        <article class="box">
-                            <figure class="card">
-                                <h2 class="port-h2"></h2>
-                                <img scr="./assets/place_holder.png" alt="Image Holder" class="placeholderimage">
-                                <p>Decription</p>
-                            </figure>
-                        </article>
-
-                        <article class="box">
-                            <figure class="card">
-                                <h2 class="port-h2"></h2>
-                                <img scr="./assets/place_holder.png" alt="Image Holder" class="placeholderimage">
-                                <p>Decription</p>
-                            </figure>
-                        </article>
-
-                        <article class="box">
-                            <figure class="card">
-                                <h2 class="port-h2"></h2>
-                                <img scr="./assets/place_holder.png" alt="Image Holder" class="placeholderimage">
-                                <p>Decription</p>
-                            </figure>
-                        </article>
+                        <span class="img-box sub-four">
+                            <img scr="./assets/placeholderimage.png" alt="Image Holder" class="placeholderimage">
+                            <div id="img-title1">Sample img</div>
+                        </span>
+                    </div>
+                </div>
             </section>
-
-            <section class="contact-me">
-                <a name="contact-me><h1 class =" main-title">Contact Me</h1></a>
-                <p>Coming Soon</p>
+            <section class="contact-me" id="contact-me">
+                <h2 class="align-left">Contact Me</h2>
+                <nav class="links1">
+                    <ul>
+                        <li><a href="github">Github</a></li>
+                        <li><a href="phonenumber">555-555-5555</a></li>
+                        <li><a href="email">hannahfranz25@gmail.com</a></li>
+                    </ul>
+                </nav>
             </section>
+        </div>
     </main>
-    <footer>
-        <a href="github">Github</a>
-        <a href="phonenumber">555-555-5555</a>
-        <a href="email">hannahfranz25@gmail.com</a>
     </footer>
 
 </body>
