--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <!--Links-->
             <ul>
                 <li><a href="#about-me">About Me</a></li>
-                <li><a href="#work">Work/a></li>
+                <li><a href="#work">Work</li>
                 <li><a href="#content-me">Contact Me</a></li>
                 <li><a href="https://www.linkedin.com/in/hannah-franz-58047021b/">linkedin</a></li>
             </ul>
