--- a/index.html
+++ b/index.html
@@ -53,22 +53,22 @@
 
                     <div id="work-parent">
                         <span class="img-box sub-one">
-                            <img scr="./assets/placeholderimage.png" alt="Image Holder" class="placeholderimage">
+                            <img scr="./assets/place_holder.png" alt="Image Holder" class="placeholderimage">
                             <div id="img-title1">Sample img</div>
                         </span>
 
                         <span class="img-box sub-two">
-                            <img scr="./assets/placeholderimage.png" alt="Image Holder" class="placeholderimage">
+                            <img scr="./assets/place_holder.png" alt="Image Holder" class="placeholderimage">
                             <div id="img-title1">Sample img</div>
                         </span>
 
                         <span class="img-box sub-three">
-                            <img scr="./assets/placeholderimage.png" alt="Image Holder" class="placeholderimage">
+                            <img scr="./assets/place_holder.png" alt="Image Holder" class="placeholderimage">
                             <div id="img-title1">Sample img</div>
                         </span>
 
                         <span class="img-box sub-four">
-                            <img scr="./assets/placeholderimage.png" alt="Image Holder" class="placeholderimage">
+                            <img scr="./assets/place_holder.png" alt="Image Holder" class="placeholderimage">
                             <div id="img-title1">Sample img</div>
                         </span>
                     </div>
