--- a/index.html
+++ b/index.html
@@ -36,8 +36,7 @@
             <section class="about_me" id="about-me">
                 <h2 class="align-left">Work</h2>
                 <p class="align-right">Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum nam ratione
-                    delectus deleniti vitae illo? Labore, veniam natus? Earum </p>
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Expedita necessitatibus esse cupiditate
+                    delectus deleniti vitae illo? Labore, veniam natus? Earum Lorem ipsum dolor sit amet consectetur, adipisicing elit. Expedita necessitatibus esse cupiditate
                     provident dolorem error laboriosam iste. Provident atque, repellendus nulla quod adipisci, incidunt
                     cumque velit exercitationem culpa eos blanditiis.</p>
             </section>
