--- a/index.html
+++ b/index.html
@@ -17,18 +17,17 @@
         <h1 id="name-style">Hannah Franz</h1>
         <nav class="links-content">
             <!--Links-->
-            <ul>
-                <li><a href="#about-me">About Me</a></li>
-                <li><a href="#work">Work</li>
-                <li><a href="#content-me">Contact Me</a></li>
-                <li><a href="https://www.linkedin.com/in/hannah-franz-58047021b/">linkedin</a></li>
+            <a href="#about-me">About Me</a>
+                <a href="#work">Work</a>
+                <a href="#content-me">Contact Me</a>
+                <a href="https://www.linkedin.com/in/hannah-franz-58047021b/">linkedin</a>
             </ul>
         </nav>
     </header>
 
     <main>
         <section class="hero" alt="large cover photo of a feild ">
-            <div id="subtitle-img">"anything can happen, thats the beauty of creating<br> -Ernie Harwell</div>
+            <div id="subtitle-img">"A new job is like a blank book and you are the author<br> -Unknown</div>
         </section>
 
         <div class="main-box">
@@ -51,22 +50,22 @@
                     </span>
 
                     <div id="work-parent">
-                        <span class="img-box sub-one">
+                        <span class="img-box img-one">
                             <img scr="./assets/place_holder.png" alt="Image Holder" class="placeholderimage">
                             <div id="img-title1">Sample img</div>
                         </span>
 
-                        <span class="img-box sub-two">
+                        <span class="img-box img-two">
                             <img scr="./assets/place_holder.png" alt="Image Holder" class="placeholderimage">
                             <div id="img-title1">Sample img</div>
                         </span>
 
-                        <span class="img-box sub-three">
+                        <span class="img-box img-three">
                             <img scr="./assets/place_holder.png" alt="Image Holder" class="placeholderimage">
                             <div id="img-title1">Sample img</div>
                         </span>
 
-                        <span class="img-box sub-four">
+                        <span class="img-box img-four">
                             <img scr="./assets/place_holder.png" alt="Image Holder" class="placeholderimage">
                             <div id="img-title1">Sample img</div>
                         </span>
@@ -76,11 +75,10 @@
             <section class="contact-me" id="contact-me">
                 <h2 class="align-left">Contact Me</h2>
                 <nav class="links1">
-                    <ul>
-                        <li><a href="github">Github</a></li>
-                        <li><a href="phonenumber">555-555-5555</a></li>
-                        <li><a href="email">hannahfranz25@gmail.com</a></li>
-                    </ul>
+                       <a href="github">Github</a>
+                        <a href="phonenumber">555-555-5555</a>
+                        <a href="email">hannahfranz25@gmail.com</a>
+    
                 </nav>
             </section>
         </div>
