--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 
+<!--style sheet links-->
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -24,21 +25,24 @@
             </ul>
         </nav>
     </header>
-
+        <!--Cover letter and filler text-->
     <main>
         <section class="hero" alt="large cover photo of a feild ">
             <div id="subtitle-img">"A new job is like a blank book and you are the author<br> -Unknown</div>
         </section>
 
         <div class="main-box">
-
+                <!--Filler text about me-->
+                <aside>
             <section class="about_me" id="about-me">
-                <h2 class="align-left">Work</h2>
+                <h2 class="align-left">More about me</h2>
+            </aside>
                 <p class="align-right">Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum nam ratione
                     delectus deleniti vitae illo? Labore, veniam natus? Earum Lorem ipsum dolor sit amet consectetur, adipisicing elit. Expedita necessitatibus esse cupiditate
                     provident dolorem error laboriosam iste. Provident atque, repellendus nulla quod adipisci, incidunt
                     cumque velit exercitationem culpa eos blanditiis.</p>
             </section>
+           
 
             <section class="about-me" id="work">
                 <h2 class="align-left">Work</h2>
