--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 
 <!--style sheet links-->
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -19,30 +20,28 @@
         <nav class="links-content">
             <!--Links-->
             <a href="#about-me">About Me</a>
-                <a href="#work">Work</a>
-                <a href="#content-me">Contact Me</a>
-                <a href="https://www.linkedin.com/in/hannah-franz-58047021b/">linkedin</a>
+            <a href="#work">Work</a>
+            <a href="#content-me">Contact Me</a>
+            <a href="https://www.linkedin.com/in/hannah-franz-58047021b/">linkedin</a>
             </ul>
         </nav>
     </header>
-        <!--Cover letter and filler text-->
+    <!--Cover letter and filler text-->
     <main>
-        <section class="hero" alt="large cover photo of a feild ">
+        <section class="hero" alt="large cover photo">
             <div id="subtitle-img">"A new job is like a blank book and you are the author<br> -Unknown</div>
         </section>
 
         <div class="main-box">
-                <!--Filler text about me-->
-                <aside>
+            <!--Filler text about me-->
             <section class="about_me" id="about-me">
                 <h2 class="align-left">More about me</h2>
-            </aside>
                 <p class="align-right">Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum nam ratione
-                    delectus deleniti vitae illo? Labore, veniam natus? Earum Lorem ipsum dolor sit amet consectetur, adipisicing elit. Expedita necessitatibus esse cupiditate
+                    delectus deleniti vitae illo? Labore, veniam natus? Earum Lorem ipsum dolor sit amet consectetur,
+                    adipisicing elit. Expedita necessitatibus esse cupiditate
                     provident dolorem error laboriosam iste. Provident atque, repellendus nulla quod adipisci, incidunt
                     cumque velit exercitationem culpa eos blanditiis.</p>
             </section>
-           
 
             <section class="about-me" id="work">
                 <h2 class="align-left">Work</h2>
@@ -79,10 +78,10 @@
             <section class="contact-me" id="contact-me">
                 <h2 class="align-left">Contact Me</h2>
                 <nav class="links1">
-                       <a href="github">Github</a>
-                        <a href="phonenumber">555-555-5555</a>
-                        <a href="email">hannahfranz25@gmail.com</a>
-    
+                    <a href="github">Github</a>
+                    <a href="phonenumber">555-555-5555</a>
+                    <a href="email">hannahfranz25@gmail.com</a>
+
                 </nav>
             </section>
         </div>
